packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
.profileHeaderRow {
  margin-bottom: 2rem;
}

.profilePicCol img {
  height: 15rem;
  width: auto;
  border-radius: 30px !important;
}
.communityInfoCol {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.communityInfoCol > * {
  margin: 0.75rem 0;
}
.titleRow {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.titleRow .title {
  font-size: xx-large;
  font-weight: 700;
}
.titleRow .contractAddressPill {
  background-color: rgba(128, 128, 128, 0.1);
  font-weight: 400;
  padding: 0.4rem 0.6rem;
  border-radius: 10px;
  cursor: pointer;
  margin-left: 1rem;
  letter-spacing: 0.2px;
}

.subInfoRow {
  display: flex;
  font-size: medium;
  color: var(--brand-gray);
}

.subInfoRow div:nth-child(2) {
  margin-left: 1rem;
}

.propHouseDataRow {
  display: flex;
}
.propHouseDataRow .item:nth-child(1) {
  margin-left: 0;
}
.propHouseDataRow .item {
  margin-right: 2rem;
}

.item {
  display: flex;
  align-items: center;
  font-size: large;
}
.itemTitle {
  color: var(--brand-gray);
}
.itemData {
  font-weight: bold;
  margin-right: 0.5rem;
}

.communityDescriptionRow p {
  font-size: large;
  color: var(--brand-gray);
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3; /* number of lines to show */
  line-clamp: 3;
  -webkit-box-orient: vertical;
}

@media (max-width: 992px) {
  .profileHeaderRow {
    margin-bottom: 0rem;
  }

  .profilePicCol {
    text-align: center;
    margin-bottom: 1rem;
  }
  .communityInfoCol {
    margin: 0 1rem;
  }
  .propHouseDataRow .item {
    margin-right: 0.75rem;
  }
  .subInfoRow {
    display: block;
  }
  .spacer {
    display: none;
  }
  .phLink {
    margin-top: 1rem;
  }
  .longName {
    flex-direction: column;
  }
  .longName .contractAddressPill {
    margin-left: 0 !important;
  }
}

